# rules_typescript

./: .gitignore  DEVELOPING.md  README.md  WORKSPACE  package.bzl  package.json
.circleci/: config.yml
devserver_binaries/: BUILD.bazel
internal/devserver/: ts_devserver.bzl
